--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Search App</title>
     <link rel="stylesheet" href="/styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <script defer src="/src/app.js"></script>
 </head>
 <body>
+    <header>
+        <span id="home-btn" class="material-symbols-outlined">home</span>
+        <nav>
+            <span id="search-btn" class="material-symbols-outlined">search</span>
+            <span id="favorites-btn" class="material-symbols-outlined">book_ribbon</span>
+        </nav>
+    </header>
+    <main>
+        <div id="search">
+            <form id="search-form">
+                <input type="text" id="search-input" placeholder="Search movie title...">
+                <button type="submit" id="search-icon" class="material-symbols-outlined">search</span>
+            </form>
+    </div>
+    </main>
     
 </body>
 </html>
