--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Search App</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="/styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <script defer src="/src/app.js"></script>
@@ -17,12 +18,7 @@
         </nav>
     </header>
     <main>
-        <div id="search">
-            <form id="search-form">
-                <input type="text" id="search-input" placeholder="Search movie title...">
-                <button type="submit" id="search-icon" class="material-symbols-outlined">search</span>
-            </form>
-    </div>
+
     </main>
     
 </body>
