Added footer design and enhanced movie card layout

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <main>
 
     </main>
+    <footer>
+        <p>&copy;  Movie Search App by Emil Omayski 2025</p>
+    </footer>
     
 </body>
 </html>
